# Heat1-Lambdas

./: .gitignore  Cargo.toml  README.md  go.mod  mockGetUser.json  mockGetUserLeaguesByFirebaseId.json  mockGetUserLeaguesById.json  mockUpdateUsername.json
ci/: main.go
src/: lib.rs
src/data/: data_client.rs  league_response.rs  mod.rs
src/data/models/: app_user.rs  competition.rs  competition_competitor.rs  competitor.rs  competitor_status.rs  country.rs  division.rs  elite_competitor.rs  gender.rs  mod.rs  region.rs  score.rs  tournament.rs  tournament_type.rs  tournament_user_picks.rs  tournament_users.rs  tournament_workouts.rs
src/domain/: http_status.rs  mod.rs  success_api_response.rs
src/domain/errors/: base_error.rs  error_severity.rs  invalid_query_param_error.rs  mod.rs
src/handlers/: get_email.rs  get_tournaments.rs  get_user_leagues.rs  update_username.rs
src/repository/: app_user.rs  league_repository.rs  mod.rs
src/service/: mod.rs  tournament_service.rs  user_service.rs
